filtre date pour la caisse.